# rsearch

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO  build.rs  deny.toml  storage.db-shm  storage.db-wal
docs/: flow.drawio
docs/pipeline/: pipeline.drawio
src/: lib.rs  main.rs
src/api/: mod.rs
src/engine/: decompressor.rs  mod.rs  scanner.rs  storage.rs  utils.rs
src/engine/classifier/: mod.rs  worker.rs
src/engine/decompressor/: mod.rs
src/engine/extractor/: commands.rs  mod.rs  tokens.rs  utils.rs  worker.rs  workers.rs
src/engine/extractor/formats/: mod.rs  pdf.rs  text.rs
src/engine/extractor/formats/archive/: zip.rs
src/engine/extractor/formats/microsoft/: docx.rs  mod.rs
src/engine/scanner/: filters.rs  mod.rs
src/entities/: container.rs  document.rs  mod.rs
src/storage/: commands.rs  mod.rs
