[package]
name = "rsearch"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
regex = "1.12.2"
rusqlite = "0.37.0"
walkdir = "2.5.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
chrono = "0.4"  # se vuoi timestamp custom
pdfium-render = "0.8.37"
