[package]
name = "rsearch"
version = "0.1.0"
edition = "2024"
license = "MIT"
license-file = "LICENSE"

[dependencies]
crossbeam = "^0.8.4"
regex = "^1.12.2"
rusqlite = "^0.38.0"
walkdir = "^2.5.0"
tracing = "^0.1.43"
tracing-subscriber = { version = "^0.3", features = ["fmt", "env-filter"] }
tracing-appender = "^0.2"
chrono = "^0.4"
pdfium-render = "^0.8.37"
once_cell = "^1.21.3"
zip = "^7.0.0"
quick-xml = "^0.38.4"
uuid = { version = "^1.19.0", features = ["v4"] }
