[package]
name = "rsearch"
version = "0.1.3"
edition = "2024"
license-file = "LICENSE"

[dependencies]
# CORE
walkdir = "^2.5.0"
rusqlite = "^0.38.0"
crossbeam-channel = "0.5.15"

# LOGGING
tracing = "^0.1.43"
tracing-subscriber = { version = "^0.3", default-features = false, features = ["fmt", "ansi"] }
tracing-appender = "^0.2"

# ENGINE
zip = "^7.0.0"
quick-xml = "^0.38.4"
pdfium-render = "^0.8.37"

# UTILITIES
once_cell = "^1.21.3"
uuid = { version = "^1.19.0", features = ["v4"] }
regex = "^1.12.2"